# LDB

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.claude/commands/: re-analyze.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  rfc.yml
.github/workflows/: ci.yml
docs/: 00-README.md  01-gdb-core-methodology.md  02-ldb-mvp-plan.md  03-ldb-full-roadmap.md  04-determinism-audit.md  05-protocol-versioning.md  06-ci.md  07-dap-shim.md  08-probe-recipes.md  09-artifact-knowledge-graph.md  11-non-stop.md  12-capstone-disasm.md  13-v1-readiness.md  14-pack-signing.md  15-post-v1-plan.md  16-reverse-exec.md  17-version-plan.md  18-gdbmi-backend.md  19-ssh-remote.md  20-embedded-python.md  21-probe-agent.md  22-perf-integration.md  23-symbol-index.md  24-session-fork-replay.md  25-own-rsp-client.md  26-nonstop-runtime.md  27-nonstop-listener.md  28-agent-expressions.md  29-predicate-compiler.md  30-tracepoints.md  31-own-ptrace.md  32-hardware-tracing.md  33-criu.md  34-tracepoints-in-target.md  35-field-report-followups.md  POST-V0.1-PROGRESS.md  WORKLOG.md  macos-arm64-status.md
include/ldb/: version.h
skills/: README.md  re-analyze.md
src/: CMakeLists.txt  main.cpp
src/agent_expr/: bytecode.h  codec.cpp  compiler.cpp  compiler.h  evaluator.cpp
src/backend/: chained_fixups.cpp  debugger_backend.h  lldb_backend.cpp  lldb_backend.h  xref_arm64_parsers.cpp  xref_arm64_parsers.h
src/backend/gdbmi/: backend.cpp  backend.h  parser.cpp  parser.h  session.cpp  session.h
src/daemon/: describe_schema.h  dispatcher.cpp  dispatcher.h  socket_loop.cpp  socket_loop.h  stdio_loop.cpp  stdio_loop.h
src/dap/: handlers.cpp  handlers.h  main.cpp  rpc_channel.cpp  rpc_channel.h  transport.cpp  transport.h
src/index/: symbol_index.cpp  symbol_index.h
src/observers/: exec_allowlist.cpp  exec_allowlist.h  net_igmp.cpp  net_sockets.cpp  net_tcpdump.cpp  observers.h  proc.cpp
src/perf/: perf_parser.cpp  perf_parser.h  perf_runner.cpp  perf_runner.h
src/probe_agent/: CMakeLists.txt  bpf_runtime.cpp  bpf_runtime.h  main.cpp  protocol.cpp  protocol.h
src/probe_agent/bpf/: hello.bpf.c
src/probes/: agent_engine.cpp  agent_engine.h  bpftrace_engine.cpp  bpftrace_engine.h  probe_orchestrator.cpp  probe_orchestrator.h  rate_limit.cpp  rate_limit.h
src/protocol/: cost.cpp  cost.h  jsonrpc.cpp  jsonrpc.h  notifications.cpp  notifications.h  output_channel.cpp  output_channel.h  provenance.cpp  provenance.h  transport.cpp  transport.h  version.cpp  version.h  view.cpp  view.h
src/python/: embed.cpp  embed.h
src/runtime/: nonstop_listener.cpp  nonstop_listener.h  nonstop_runtime.cpp  nonstop_runtime.h
src/store/: artifact_store.cpp  artifact_store.h  hypothesis.cpp  hypothesis.h  pack.cpp  pack.h  pack_signing.cpp  pack_signing.h  recipe_store.cpp  recipe_store.h  session_store.cpp  session_store.h
src/transport/: local_exec.cpp  local_exec.h  rr.cpp  rr.h  ssh.cpp  ssh.h  streaming_exec.cpp  streaming_exec.h
src/transport/rsp/: channel.cpp  channel.h  framing.cpp  framing.h  packets.cpp  packets.h
src/util/: base64.cpp  base64.h  log.cpp  log.h  sha256.cpp  sha256.h
tests/: CMakeLists.txt  check_ci_yaml.py
tests/baselines/: agent_workflow_tokens.json
tests/fixtures/: CMakeLists.txt  perf_script_sample.txt
tests/fixtures/asm/: xref_addclobber.s  xref_callclobber.s  xref_cond_fallthrough.s  xref_cond_same_fn.s  xref_condbranch.s  xref_csel.s  xref_fnleak.s  xref_ldp_clobber.s  xref_pac_callclobber.s  xref_pcrel_literal.s  xref_str.s  xref_stripped_fnleak.s  xref_subclobber.s  xref_writeback_ldr.s
tests/fixtures/c/: chain_slot.c  dlopener.c  looper.c  real_world_xref.c  sleeper.c  structs.c
tests/fixtures/cpp/: cppsyms.cpp
tests/fixtures/keys/: README  alice_ed25519  alice_ed25519.pub  bob_ed25519.pub  charlie_ed25519_enc  charlie_ed25519_enc.pub
tests/fixtures/text/: proc_fds_self.txt  proc_maps_self.txt  proc_net_igmp.txt  proc_net_igmp6.txt  proc_status_pid1.txt  ss_tunap.txt  tcpdump_lo.txt
tests/smoke/: _ptrace_probe.py  run.sh  test_agent_workflow.py  test_artifact.py  test_artifact_relations.py  test_attach.py  test_cbor.py  test_cli_repl.py  test_cli_sibling_lookup.py  test_connect_remote.py  test_connect_remote_ssh.py  test_connect_rr.py  test_core.py  test_correlate.py  test_cost.py  test_cost_p50.py  test_daemon_shutdown_rpc.py  test_dap_shim.py  test_describe_endpoints.py  test_disasm.sh  test_frame_values.py  test_gdbmi_backend.py  test_hello_capabilities.py  test_hello_handshake.py  test_hypothesis.py  test_index_cold_warm.py  test_ldb_cli.py  test_ldb_cli_ssh.py  test_ldbpack.py  test_live_continue_provenance.py  test_live_determinism_gate.py  test_live_dlopen.py  test_live_provenance.py  test_mem_dump.py  test_memory.py  test_multi_binary.py  test_observer.py  test_observer_exec.py  test_observer_igmp.py  test_observer_tcpdump.py  (+59 more)
tests/unit/: CMakeLists.txt  ptrace_probe.h  test_agent_expr_codec.cpp  test_agent_expr_compiler.cpp  test_agent_expr_evaluator.cpp  test_artifact_relations.cpp  test_artifact_store.cpp  test_audit_bugfixes.cpp  test_backend_attach.cpp  test_backend_breakpoint.cpp  test_backend_connect_remote.cpp  test_backend_connect_remote_rr.cpp  test_backend_connect_remote_ssh.cpp  test_backend_continue_thread.cpp  test_backend_core.cpp  test_backend_disasm.cpp  test_backend_frame_values.cpp  test_backend_gdbmi.cpp  test_backend_globals_of_type.cpp  test_backend_iterate.cpp  test_backend_memory.cpp  test_backend_process.cpp  test_backend_provenance.cpp  test_backend_reverse_exec.cpp  test_backend_reverse_exec_rr.cpp  test_backend_step.cpp  test_backend_string_list.cpp  test_backend_string_xref.cpp  test_backend_suspend_thread.cpp  test_backend_symbol_find.cpp  test_backend_symbol_find_demangle.cpp  test_backend_targets.cpp  test_backend_threads.cpp  test_backend_type_layout.cpp  test_backend_value_eval.cpp  test_backend_value_read.cpp  test_backend_xref.cpp  test_bpf_agent_protocol.cpp  test_bpftrace_live.cpp  test_bpftrace_parser.cpp  (+82 more)
tools/ldb/: ldb
(+2 files in other folders)
